Added urls for editing houses, deleting houses, adding houses

--- a/chore_tracker/house/templates/house/house.html
+++ b/chore_tracker/house/templates/house/house.html
@@ -3,11 +3,9 @@
 <link rel="stylesheet" type="text/css" href="{% static 'house/css/bootstrap.min.css' %}"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" type="text/css" href="{% static 'house/style.css' %}"/>
-<link rel="stylesheet" type="text/css" href="{% static 'house/css.stylesheet.css' %}">
 <link rel="icon" type="image/png" sizes="16x16" href="{% static 'house/images/icon2.png' %}">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-<script src="js/bootstrap.js"></script>
 </head>
 
 <title>House</title>
@@ -15,7 +13,7 @@
 	<!-- Black navbar header -->
 	<nav class="navbar navbar-inverse navbar-static-top">
 		<div class="container-fluid">
-			<a class="navbar-brand" href="{% url 'chore_app:index' %}" style="font-family:Cambria"></span> Chore Tracker</a>
+			<a class="navbar-brand" href="{% url 'house:house' %}">Chore Tracker</a>
 			<button class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
@@ -25,7 +23,7 @@
 				<ul class="nav navbar-nav navbar-right">
 					<!-- Settings dropdown menu -->
 					<li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown" style="font-family:Cambria">Settings<b class="caret"></b></a>
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Settings<b class="caret"></b></a>
 						<ul class="dropdown-menu">
 							<li><a href="#">About</a></li>
 							<li><a href="#">Preferences</a></li>
@@ -37,16 +35,31 @@
 		</div>
 	</nav>
 	<!-- List all of the names in the houses -->
-	{% if alphabetical_order %}
-	<div style="position: relative; left:15; width: 400; bottom: 10">
-		<h1>The Houses:</h1>
+	<div id='add-house'>
+		<a href="{% url 'house:addHouse' %}" class="btn btn-primary" role="button">Add House</a>
 	</div>
-		<!-- If names exist in database, list them out in for loop -->
+	{% if houses %}
+	<div>
+		<h1>Houses:</h1>
+	</div>
+		<!-- If houses exist in database, list them out in for loop -->
 		<div>
 		    <ul>
-		    {% for house in alphabetical_order %}
+		    {% for house in houses %}
 		    	<div>
-		    		<li>{{ house }}</li>
+		    		<li>
+		    			<a href="{% url 'chore_app:index' house.id %}" class='house-name'>{{ house.house_name }}</a>
+		        		<a href="{% url 'house:editHouse' house.id %}" class="btn btn-info"><span class="glyphicon glyphicon-pencil"></span></a>
+		        		<a href="{% url 'house:deleteHouse' house.id %}" class="btn btn-danger" onclick='clicked(event)'>
+		        			<script>
+		        				function clicked(e) {
+		        					if(!confirm('Are you sure you want to delete this house?')) {
+		        						e.preventDefault();
+		        					}
+		        				}
+		        			</script>
+		        			<span class="glyphicon glyphicon-trash"></span></a>
+		    		</li>
 		    	<div>
 		    {% endfor %}
 		    </ul>
