--- a/chore_tracker/chore_app/templates/chore_app/addChore.html
+++ b/chore_tracker/chore_app/templates/chore_app/addChore.html
@@ -15,7 +15,7 @@
 	<!-- Black navbar header -->
 	<nav class="navbar navbar-inverse navbar-static-top">
 		<div class="container-fluid">
-			<a class="navbar-brand" href="{% url 'chore_app:index' %}" style="font-family:Cambria">Chore Tracker</a>
+			<a class="navbar-brand" href="{% url 'chore_app:index' house.id %}">Chore Tracker</a>
 			<button class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
@@ -25,7 +25,7 @@
 				<ul class="nav navbar-nav navbar-right">
 					<!-- Settings dropdown menu -->
 					<li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown" style="font-family:Cambria">Settings<b class="caret"></b></a>
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Settings<b class="caret"></b></a>
 						<ul class="dropdown-menu">
 							<li><a href="#">About</a></li>
 							<li><a href="#">Preferences</a></li>
@@ -39,14 +39,14 @@
 	<div class="add">
 		<h1>Add Chore</h1>
 	</div> 
-	<form method='POST' action='' style="position: relative; padding-left: 10px; padding-right: 10px">
+	<form method='POST' action=''>
 		{% csrf_token %}
 		{{ form.as_p }}
 		<div class='save'>
 			<input type='submit' class = "btn btn-success pull-left" value='Add Chore'/>
 		</div>
 		<div class='cancel'>
-			<a href="{% url 'chore_app:detail' housemate.id %}" class="btn btn-danger" role="button">Cancel</a>
+			<a href="{% url 'chore_app:detail' house.id housemate.id %}" class="btn btn-danger" role="button">Cancel</a>
 		</div>
 	</form>
 </body>
