--- a/chore_tracker/chore_app/templates/chore_app/detail.html
+++ b/chore_tracker/chore_app/templates/chore_app/detail.html
@@ -15,7 +15,7 @@
 	<!-- Black navbar header -->
 	<nav class="navbar navbar-inverse navbar-static-top">
 		<div class="container-fluid">
-			<a class="navbar-brand" href="{% url 'chore_app:index' %}">Chore Tracker</a>
+			<a class="navbar-brand" href="{% url 'chore_app:index' house.id %}">Chore Tracker</a>
 			<button class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
@@ -25,7 +25,7 @@
 				<ul class="nav navbar-nav navbar-right">
 					<!-- Settings dropdown menu -->
 					<li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown" style="font-family:Cambria">Settings<b class="caret"></b></a>
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Settings<b class="caret"></b></a>
 						<ul class="dropdown-menu">
 							<li><a href="#">About</a></li>
 							<li><a href="#">Preferences</a></li>
@@ -38,10 +38,10 @@
 	</nav>
 	<div>
 		<div id='name'>
-			<h1>{{housemate.full_name }}</h1>
+			<h1>{{ housemate.full_name }}</h1>
 		</div>
 		<div id='add-chore'>
-			<a href="{% url 'chore_app:addChore' housemate.id %}" class="btn btn-primary" role="button">Add Chore</a>
+			<a href="{% url 'chore_app:addChore' house.id housemate.id %}" class="btn btn-primary" role="button">Add Chore</a>
 		</div>
 		{% if overdue_set %} <!-- Overdue Chore Table -->
 			<div>
@@ -59,7 +59,7 @@
 						{% cycle '<tr>' '' %}
 							<td> {{ chore.chore_title}} </td>
 							<td> {{ chore.due_date }} </td>
-							<td class='delete-btn'><a href="{% url 'chore_app:deleteChore' housemate.id chore.id %}" class="btn btn-danger" role="button" onclick='clicked(event)'>
+							<td class='delete-btn'><a href="{% url 'chore_app:deleteChore' house.id housemate.id chore.id %}" class="btn btn-danger" role="button" onclick='clicked(event)'>
 								<script>
 									function clicked(e) {
 									    if(!confirm('Are you sure you would like to delete this chore?')) {
@@ -91,7 +91,7 @@
 							{% cycle '<tr>' '' %}
 								<td> {{ chore.chore_title}} </td>
 								<td> {{ chore.due_date }} </td>
-								<td class='delete-btn'><a href="{% url 'chore_app:deleteChore' housemate.id chore.id %}" class="btn btn-danger" role="button" onclick='clicked(event)'> 
+								<td class='delete-btn'><a href="{% url 'chore_app:deleteChore' house.id housemate.id chore.id %}" class="btn btn-danger" role="button" onclick='clicked(event)'> 
 									<script>
 										function clicked(e) {
 										    if(!confirm('Are you sure you would like to delete this chore?')) {
@@ -132,7 +132,7 @@
 							{% cycle '<tr>' '' %}
 								<td> {{ chore.chore_title}} </td>
 								<td> {{ chore.due_date }} </td>
-								<td class='delete-btn'><a href="{% url 'chore_app:deleteChore' housemate.id chore.id %}" class="btn btn-danger" role="button" onclick='clicked(event)'>
+								<td class='delete-btn'><a href="{% url 'chore_app:deleteChore' house.id housemate.id chore.id %}" class="btn btn-danger" role="button" onclick='clicked(event)'>
 									<script>
 										function clicked(e) {
 										    if(!confirm('Are you sure you would like to delete this chore?')) {
@@ -164,7 +164,7 @@
 						{% cycle '<tr>' '' %}
 							<td> {{ chore.chore_title}} </td>
 							<td> {{ chore.due_date }} </td>
-							<td class='delete-btn'><a href="{% url 'chore_app:deleteChore' housemate.id chore.id %}" class="btn btn-danger" role="button" onclick='clicked(event)'>
+							<td class='delete-btn'><a href="{% url 'chore_app:deleteChore' house.id housemate.id chore.id %}" class="btn btn-danger" role="button" onclick='clicked(event)'>
 								<script>
 									function clicked(e) {
 									    if(!confirm('Are you sure you would like to delete this chore?')) {
