--- a/chore_tracker/chore_app/templates/chore_app/editInfo.html
+++ b/chore_tracker/chore_app/templates/chore_app/editInfo.html
@@ -13,7 +13,7 @@
 	<!-- Black navbar header -->
 	<nav class="navbar navbar-inverse navbar-static-top">
 		<div class="container-fluid">
-			<a class="navbar-brand" href="{% url 'chore_app:index' %}" style="font-family:Cambria">Chore Tracker</a>
+			<a class="navbar-brand" href="{% url 'chore_app:index' house.id %}">Chore Tracker</a>
 			<button class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
@@ -23,7 +23,7 @@
 				<ul class="nav navbar-nav navbar-right">
 					<!-- Settings dropdown menu -->
 					<li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown" style="font-family:Cambria">Settings<b class="caret"></b></a>
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Settings<b class="caret"></b></a>
 						<ul class="dropdown-menu">
 							<li><a href="#">About</a></li>
 							<li><a href="#">Preferences</a></li>
@@ -34,8 +34,8 @@
 			</div>
 		</div>
 	</nav>
-	<h1 style="position: relative; left: 10px; width: 400; font-size: 25;">Edit Housemate</h1> 
-	<form method='POST' action='' style="position: relative;left: 10px">
+	<h1>Edit Housemate</h1> 
+	<form method='POST' action=''>
 		{% csrf_token %}
 		<label>First name</label></br> 
 		<input type='text' name='first_name' default='None'/></br>
@@ -47,7 +47,7 @@
 			<input type='submit' class = "btn btn-success pull-left" value='Save'/>
 		</div>
 		<div class="cancel">
-			<a href="{% url 'chore_app:index' %}" class="btn btn-danger" role="button">Cancel</a>
+			<a href="{% url 'chore_app:index' house.id %}" class="btn btn-danger" role="button">Cancel</a>
 		</div>
 	</form>
 </body>
