--- a/chore_tracker/chore_app/templates/chore_app/index.html
+++ b/chore_tracker/chore_app/templates/chore_app/index.html
@@ -9,12 +9,12 @@
 </head>
 
 
-<title>Home</title>
+<title>House details</title>
 <body>
 	<!-- Black navbar header -->
 	<nav class="navbar navbar-inverse navbar-static-top">
 		<div class="container-fluid">
-			<a class="navbar-brand" href="{% url 'chore_app:index' %}">Chore Tracker</a>
+			<a class="navbar-brand" href="{% url 'house:house' %}">Chore Tracker</a>
 			<button class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
@@ -48,29 +48,38 @@
             </div>
         </div>
 	</nav>
-	{% if alphabetical_order %} <!-- List all of the names in the household of housemates -->
-		<div>
-			<div id='add-housemate'>
-				<a href="{% url 'chore_app:addHousemate' %}" class="btn btn-primary" role="button">Add Housemate</a>
-			</div>
-			<div>
-				<h1>Housemates:</h1>
-			</div>
-			<div>
-			    <ul>
-			    {% for housemate in alphabetical_order %} <!-- If names exist in database, list them out in for loop -->
-		        	<li>
-		        		<a class='housemate-name' href="{% url 'chore_app:detail' housemate.id %}">{{ housemate.full_name }}</a>
-		        		<a href="{% url 'chore_app:editInfo' housemate.id %}" class="btn btn-info"> <span class="glyphicon glyphicon-pencil"></span></a>
-		        		<a href="{% url 'chore_app:deleteHousemate' housemate.id %}" class="btn btn-danger"> <span class="glyphicon glyphicon-trash"></span></a>
-		        	</li>
-			    {% endfor %}
-			    </ul>
-			</div>
-		</div>
-	{% else %} <!-- If there are no housemates -->
+	<!-- List all of the names in the household of housemates -->
+    <div>
+	<div id='add-housemate'>
+		<a href="{% url 'chore_app:addHousemate' house.id %}" class="btn btn-primary" role="button">Add Housemate</a>
+	</div>
+	<div>
+		<h1>{{ house }}</h1>
+	</div>
+    {% if house.housemate_set.all %}
+	<div>
+	    <ul>
+	    {% for housemate in house.housemate_set.all %} <!-- If names exist in database, list them out in for loop -->
+        	<li>
+        		<a class='housemate-name' href="{% url 'chore_app:detail' house.id housemate.id %}">{{ housemate.full_name }}</a>
+        		<a href="{% url 'chore_app:editInfo' house.id housemate.id %}" class="btn btn-info"> <span class="glyphicon glyphicon-pencil"></span></a>
+        		<a href="{% url 'chore_app:deleteHousemate' house.id housemate.id %}" class="btn btn-danger" onclick='clicked(event)'>
+                    <script>
+                        function clicked(e) {
+                            if(!confirm('Are you sure you would like to delete this housemate?')) {
+                                e.preventDefault();
+                            }
+                        }
+                    </script>
+                    <span class="glyphicon glyphicon-trash"></span></a>
+        	</li>
+	    {% endfor %}
+	    </ul>
+	</div>
+    {% else %} <!-- If there are no housemates -->
 		<div>
 		    <p>No names are available.</p>
 		</div>	
 	{% endif %}
+    </div>
 </body>
