--- a/chore_tracker/house/templates/house/house.html
+++ b/chore_tracker/house/templates/house/house.html
@@ -1,8 +1,8 @@
 {% load staticfiles %}
 <head>
-<link rel="stylesheet" type="text/css" href="{% static 'house/css/bootstrap.min.css' %}"/>
+<link rel="stylesheet" type="text/css" href="{% static 'chore_app/css/bootstrap.min.css' %}"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" type="text/css" href="{% static 'house/style.css' %}"/>
+<link rel="stylesheet" type="text/css" href="{% static 'chore_app/style.css' %}"/>
 <link rel="icon" type="image/png" sizes="16x16" href="{% static 'house/images/icon2.png' %}">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
