--- a/chore_tracker/house/templates/house/house.html
+++ b/chore_tracker/house/templates/house/house.html
@@ -34,23 +34,21 @@
 			</div>
 		</div>
 	</nav>
-	<!-- List all of the names in the houses -->
 	<div id='add-house'>
 		<a href="{% url 'house:addHouse' %}" class="btn btn-primary" role="button">Add House</a>
 	</div>
-	{% if houses %}
 	<div>
 		<h1>Houses:</h1>
 	</div>
-		<!-- If houses exist in database, list them out in for loop -->
+	{% if houses %}
 		<div>
 		    <ul>
 		    {% for house in houses %}
 		    	<div>
 		    		<li>
 		    			<a href="{% url 'chore_app:index' house.id %}" class='house-name'>{{ house.house_name }}</a>
-		        		<a href="{% url 'house:editHouse' house.id %}" class="btn btn-info"><span class="glyphicon glyphicon-pencil"></span></a>
-		        		<a href="{% url 'house:deleteHouse' house.id %}" class="btn btn-danger" onclick='clicked(event)'>
+		        		<a href="{% url 'house:editHouse' house.id %}" class="btn btn-info" id='edit-del-btn'><span class="glyphicon glyphicon-pencil"></span></a>
+		        		<a href="{% url 'house:deleteHouse' house.id %}" class="btn btn-danger" onclick='clicked(event)' id='edit-del-btn'>
 		        			<script>
 		        				function clicked(e) {
 		        					if(!confirm('Are you sure you want to delete this house?')) {
@@ -58,14 +56,14 @@
 		        					}
 		        				}
 		        			</script>
-		        			<span class="glyphicon glyphicon-trash"></span></a>
+		        			<span class="glyphicon glyphicon-trash"></span>
+		        		</a>
 		    		</li>
 		    	<div>
 		    {% endfor %}
 		    </ul>
 		</div>
 	{% else %}
-		<!-- print statement displaying no names available -->
 	    <p>No names are available.</p>
 	{% endif %}
 </body>
