--- a/chore_tracker/chore_app/templates/chore_app/detail.html
+++ b/chore_tracker/chore_app/templates/chore_app/detail.html
@@ -30,6 +30,7 @@
 							<li><a href="#">About</a></li>
 							<li><a href="#">Preferences</a></li>
 							<li><a href="#">Help</a></li>
+							<li><a href="/chore_app/accounts/logout/">Log out</a></li>
 						</ul>
 					</li>
 				</ul>
