Changed 'Add' to 'New' header.

--- a/chore_tracker/chore_app/templates/chore_app/addChore.html
+++ b/chore_tracker/chore_app/templates/chore_app/addChore.html
@@ -37,7 +37,7 @@
 		</div>
 	</nav>
 	<div class="add">
-		<h1>Add Chore</h1>
+		<h1>New Chore</h1>
 	</div> 
 	<form method='POST' action=''>
 		{% csrf_token %}
