--- a/chore_tracker/chore_app/templates/chore_app/addHousemate.html
+++ b/chore_tracker/chore_app/templates/chore_app/addHousemate.html
@@ -34,7 +34,7 @@
 			</div>
 		</div>
 	</nav>
-	<h1>Add Housemate</h1> 
+	<h1>New Housemate</h1> 
 	<form method='post' action=''>
 		{% csrf_token %}		
 		{{ form.as_p }}
