Edited hard-coded link to app name

--- a/chore_tracker/chore_app/templates/chore_app/home.html
+++ b/chore_tracker/chore_app/templates/chore_app/home.html
@@ -5,8 +5,8 @@
 {% block navbar %}
     <ul class="nav navbar-nav navbar-right">
 {#        <li class="active"><a href="./">Static top <span class="sr-only">(current)</span></a></li>#}
-        <li><a href="../chore_app/accounts/login/">Log in</a></li>
-        <li><a href="../chore_app/accounts/register/">Register</a></li>
+        <li><a href="../accounts/login/">Log in</a></li>
+        <li><a href="../accounts/register/">Register</a></li>
     </ul>
 
 {% endblock %}
