--- a/chore_tracker/chore_app/templates/chore_app/addHousemate.html
+++ b/chore_tracker/chore_app/templates/chore_app/addHousemate.html
@@ -1,4 +1,6 @@
 {% load staticfiles %}
+{% load crispy_forms_tags %}
+
 <head>
 <link rel="stylesheet" type="text/css" href="{% static 'chore_app/css/bootstrap.min.css' %}"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -35,15 +37,19 @@
 			</div>
 		</div>
 	</nav>
-	<h1>New Housemate</h1> 
-	<form method='post' action=''>
-		{% csrf_token %}		
-		{{ form.as_p }}
-		<div class='save'>
-			<input type='submit' class="btn btn-success pull-left" value='Add Housemate'/>
-		</div>
-		<div class='cancel'>
-			<a href="{% url 'chore_app:index' house.id %}" class="btn btn-danger" role="button">Cancel</a>
-		</div>
-	</form>
+    <div class="row">
+        <div class="col-xs-8 col-xs-offset-1 col-sm-6 col-sm-offset-2 col-md-4 col-md-offset-1">
+            <h1>New Housemate</h1>
+            <form method='post' action=''>
+                {% csrf_token %}
+                {{ form.as_p }}
+                <div class='save'>
+                    <input type='submit' class="btn btn-success pull-left" value='Add Housemate'/>
+                </div>
+                <div class='cancel'>
+                    <a href="{% url 'chore_app:index' house.id %}" class="btn btn-danger" role="button">Cancel</a>
+                </div>
+            </form>
+        </div>
+    </div>
 </body>
