--- a/chore_tracker/chore_app/templates/chore_app/base.html
+++ b/chore_tracker/chore_app/templates/chore_app/base.html
@@ -68,7 +68,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/chore_app">Chore Tracker</a>
+          <a class="navbar-brand" href="/">Chore Tracker</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
