Changed title to 'Chore Summary' from 'Details'

--- a/chore_tracker/chore_app/templates/chore_app/detail.html
+++ b/chore_tracker/chore_app/templates/chore_app/detail.html
@@ -10,7 +10,7 @@
 </head>
 
 <!-- set the heading to the housemate's first name, from database -->
-<title>Details</title>
+<title>Chore Summary</title>
 <body>
 	<!-- Black navbar header -->
 	<nav class="navbar navbar-inverse navbar-static-top">
@@ -23,7 +23,6 @@
 			</button>
 			<div class="collapse navbar-collapse navHeaderCollapse">
 				<ul class="nav navbar-nav navbar-right">
-                    <li><a href="../accounts/logout/">Log out</a></li>
 					<!-- Settings dropdown menu -->
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Settings<b class="caret"></b></a>
