--- a/chore_tracker/chore_app/templates/chore_app/index.html
+++ b/chore_tracker/chore_app/templates/chore_app/index.html
@@ -24,7 +24,7 @@
 				<ul class="nav navbar-nav navbar-right">
 					<!-- Settings dropdown menu -->
 					<li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ login }}<b class="caret"></b></a>
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ user.username }}<b class="caret"></b></a>
 						<ul class="dropdown-menu">
 							<li><a href="#">About</a></li>
 							<li><a href="#">Preferences</a></li>
