--- a/chore_tracker/house/templates/house/addHouse.html
+++ b/chore_tracker/house/templates/house/addHouse.html
@@ -25,7 +25,7 @@
                 <ul class="nav navbar-nav navbar-right">
                     <!-- Settings dropdown menu -->
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Settings<b class="caret"></b></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ user.username }}<b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li><a href="#">About</a></li>
                             <li><a href="#">Preferences</a></li>
