Removed 'Log out' button. Replaced 'About' in dropdown to 'Profile'

--- a/chore_tracker/chore_app/templates/chore_app/detail.html
+++ b/chore_tracker/chore_app/templates/chore_app/detail.html
@@ -23,12 +23,11 @@
 			</button>
 			<div class="collapse navbar-collapse navHeaderCollapse">
 				<ul class="nav navbar-nav navbar-right">
-                    <li><a href="../accounts/logout/">Log out</a></li>
 					<!-- Settings dropdown menu -->
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ user.username }}<b class="caret"></b></a>
 						<ul class="dropdown-menu">
-							<li><a href="#">About</a></li>
+							<li><a href="#">Profile</a></li>
 							<li><a href="#">Preferences</a></li>
 							<li><a href="#">Help</a></li>
 							<li><a href="/accounts/logout/">Log out</a></li>
