--- a/chore_tracker/house/templates/house/editHouse.html
+++ b/chore_tracker/house/templates/house/editHouse.html
@@ -27,7 +27,7 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ user.username }}<b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">About</a></li>
+                            <li><a href="#">Profile</a></li>
                             <li><a href="#">Preferences</a></li>
                             <li><a href="#">Help</a></li>
                         </ul>
