Changed trash icon to a remove icon (x)

--- a/chore_tracker/chore_app/templates/chore_app/detail.html
+++ b/chore_tracker/chore_app/templates/chore_app/detail.html
@@ -68,7 +68,7 @@
 									    }
 									}
 								</script> 
-								<span class="glyphicon glyphicon-trash"></span> </a>
+								<span class="glyphicon glyphicon-remove"></span> </a>
 							</td>
 						{% cycle '</tr>' ''%}
 						{% endfor %}
@@ -100,7 +100,7 @@
 										    }
 										}
 									</script> 
-									<span class="glyphicon glyphicon-trash"></span> </a>
+									<span class="glyphicon glyphicon-remove"></span> </a>
 								</td>
 							{% cycle '</tr>' ''%}
 						{% endfor %}
@@ -141,7 +141,7 @@
 										    }
 										}
 									</script> 
-									<span class="glyphicon glyphicon-trash"></span> </a>
+									<span class="glyphicon glyphicon-remove"></span> </a>
 								</td>
 							{% cycle '</tr>' '' %}
 						{% endfor %}
@@ -182,7 +182,7 @@
 									    }
 									}
 								</script> 
-								<span class="glyphicon glyphicon-trash"></span> </a>
+								<span class="glyphicon glyphicon-remove"></span> </a>
 							</td>
 						{% cycle '</tr>' ''%}
 						{% endfor %}
