--- a/chore_tracker/chore_app/templates/chore_app/detail.html
+++ b/chore_tracker/chore_app/templates/chore_app/detail.html
@@ -27,9 +27,12 @@
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ user.username }}<b class="caret"></b></a>
 						<ul class="dropdown-menu">
+							<li><a href="{% url 'chore_app:detail' house.id housemate.id %}">My Home</a></li>
+							<li><option disabled role=separator>______________________</li>
 							<li><a href="#">Profile</a></li>
 							<li><a href="#">Preferences</a></li>
 							<li><a href="#">Help</a></li>
+							<li><option disabled role=separator>______________________</li>
 							<li><a href="/accounts/logout/">Log out</a></li>
 						</ul>
 					</li>
