--- a/chore_tracker/house/templates/house/editHouse.html
+++ b/chore_tracker/house/templates/house/editHouse.html
@@ -1,41 +1,9 @@
+{% extends 'house/navbar.html' %}
 {% load staticfiles %}
 {% load crispy_forms_tags %}
-
-<head>
-<link rel="stylesheet" type="text/css" href="{% static 'chore_app/css/bootstrap.min.css' %}"/>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" type="text/css" href="{% static 'chore_app/style.css' %}"/>
-<link rel="icon" type="image/png" sizes="16x16" href="{% static 'chore_app/images/icon2.png' %}">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-</head>
-
+{% block content %}
 <title>Edit House</title>
 <body>
-    <!-- Black navbar header -->
-    <nav class="navbar navbar-inverse navbar-static-top">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="{% url 'house:house' %}">Chore Tracker</a>
-            <button class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <div class="collapse navbar-collapse navHeaderCollapse">
-                <ul class="nav navbar-nav navbar-right">
-                    <!-- Settings dropdown menu -->
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ user.username }}<b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">Profile</a></li>
-                            <li><a href="#">Preferences</a></li>
-                            <li><a href="#">Help</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
     <div class="row">
         <div class="col-xs-8 col-xs-offset-1 col-sm-6 col-sm-offset-2 col-md-4 col-md-offset-1">
             <h1>Edit House</h1>
@@ -55,3 +23,4 @@
         </div>
     </div>
 </body>
+{% endblock %}
