--- a/chore_tracker/chore_app/templates/chore_app/home.html
+++ b/chore_tracker/chore_app/templates/chore_app/home.html
@@ -5,8 +5,12 @@
 {% block navbar %}
     <ul class="nav navbar-nav navbar-right">
 {#        <li class="active"><a href="./">Static top <span class="sr-only">(current)</span></a></li>#}
-        <li><a href="../accounts/login/">Log in</a></li>
-        <li><a href="../accounts/register/">Register</a></li>
+        {% if request.user.is_authenticated %}
+            <li><a href="../accounts/logout/">Log out</a> </li>
+        {% else %}
+            <li><a href="../accounts/login/">Log in</a></li>
+            <li><a href="../accounts/register/">Register</a></li>
+        {% endif %}
     </ul>
 
 {% endblock %}
