--- a/chore_tracker/chore_app/templates/chore_app/registration/login.html
+++ b/chore_tracker/chore_app/templates/chore_app/registration/login.html
@@ -15,7 +15,7 @@
     <div class="row">
         <div class="col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
             <h1>Login</h1>
-            <form method="post" action=".">
+            <form method="post" action="">
                 {% csrf_token %}
                 {{ form|crispy }}
 
